@@ -4,3 +4,19 @@
 Objective: Select your preferred difficulty to start. Given a random word based on the difficulty you chose, try your best to solve the given word. With the vowels LOCKED, you'll have to go through a series of random minigames, beat those minigames and only then you'll unlock your vowels. Finish the word to win.
 
 # Download the font for the game format to work nicely
+
+# Set up
+
+Step 1:  Download the programs from the given game.
+Step 2:  Install the version 8 of JavaFX, and set it up for this program in Eclipse.
+Go to Projects > Properties > Java Build Path > Libraries.
+Click on “Module Path” then click on “Add External JARs” then add the JavaFX SDK JARs.
+Click on “Run Configuration”, Click on “Arguments”.
+Add VM arguments: --module-path /path/to/javafx-sdk-<version>/lib --add-modules javafx.controls,javafx.fxml
+Step 3:  Load the project in eclipse, and launch “TypingGame.java”.
+This will open the title screen.
+Click on “Start Game”, this will prompt you to choose a difficulty
+Click on Easy or Hard, then begin typing when prompted
+Press Enter to submit, or click “Try Again” to retry a new sentence.
+Use the “Main Menu” button to return to the title screen.
+
